add trending response

--- a/src/output.css
+++ b/src/output.css
@@ -624,10 +624,6 @@ video {
   visibility: visible;
 }
 
-.invisible{
-  visibility: hidden;
-}
-
 .fixed{
   position: fixed;
 }
@@ -640,36 +636,20 @@ video {
   position: relative;
 }
 
-.-right-72{
-  right: -18rem;
+.left-0{
+  left: 0px;
 }
 
 .left-1\/2{
   left: 50%;
 }
 
+.right-10{
+  right: 2.5rem;
+}
+
 .top-10{
   top: 2.5rem;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.left-10{
-  left: 2.5rem;
-}
-
-.left-5{
-  left: 1.25rem;
-}
-
-.left-7{
-  left: 1.75rem;
-}
-
-.top-5{
-  top: 1.25rem;
 }
 
 .top-3{
@@ -708,6 +688,10 @@ video {
   margin-left: 2.5rem;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .ml-3{
   margin-left: 0.75rem;
 }
@@ -718,10 +702,6 @@ video {
 
 .mr-10{
   margin-right: 2.5rem;
-}
-
-.mr-16{
-  margin-right: 4rem;
 }
 
 .mr-2{
@@ -748,20 +728,12 @@ video {
   margin-top: 4rem;
 }
 
-.mt-20{
-  margin-top: 5rem;
-}
-
 .mt-5{
   margin-top: 1.25rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
 .box-border{
@@ -780,8 +752,16 @@ video {
   display: none;
 }
 
+.h-16{
+  height: 4rem;
+}
+
 .h-24{
   height: 6rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-56{
@@ -808,6 +788,10 @@ video {
   min-height: 100vh;
 }
 
+.w-1\/2{
+  width: 50%;
+}
+
 .w-1\/3{
   width: 33.333333%;
 }
@@ -824,12 +808,12 @@ video {
   width: 0.5rem;
 }
 
-.w-2\/3{
-  width: 66.666667%;
-}
-
 .w-2\/5{
   width: 40%;
+}
+
+.w-3\/4{
+  width: 75%;
 }
 
 .w-full{
@@ -838,14 +822,6 @@ video {
 
 .w-screen{
   width: 100vw;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-3\/4{
-  width: 75%;
 }
 
 .-translate-x-1\/2{
@@ -891,6 +867,23 @@ video {
           animation: bounce 1s infinite;
 }
 
+@-webkit-keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.animate-pulse{
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
 .list-disc{
   list-style-type: disc;
 }
@@ -905,6 +898,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-col-reverse{
+  flex-direction: column-reverse;
 }
 
 .flex-wrap{
@@ -991,6 +988,16 @@ video {
   border-color: rgb(252 163 17 / var(--tw-border-opacity));
 }
 
+.bg-pulse{
+  --tw-bg-opacity: 1;
+  background-color: rgb(23 37 84 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-title{
   --tw-bg-opacity: 1;
   background-color: rgb(20 33 61 / var(--tw-bg-opacity));
@@ -1064,6 +1071,10 @@ video {
   padding-bottom: 4rem;
 }
 
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
 .pl-5{
   padding-left: 1.25rem;
 }
@@ -1080,20 +1091,12 @@ video {
   padding-top: 3rem;
 }
 
-.pt-16{
-  padding-top: 4rem;
-}
-
 .pt-2{
   padding-top: 0.5rem;
 }
 
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pb-5{
-  padding-bottom: 1.25rem;
 }
 
 .text-left{
@@ -1208,6 +1211,10 @@ video {
   color: rgb(252 163 17 / var(--tw-text-opacity));
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
 .opacity-80{
   opacity: 0.8;
 }
@@ -1226,14 +1233,6 @@ video {
 .filter{
   -webkit-filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
           filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.transition{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
 }
 
 .transition-all{
@@ -1278,10 +1277,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:visible{
-    visibility: visible;
-  }
-
   .md\:ml-10{
     margin-left: 2.5rem;
   }
@@ -1298,12 +1293,12 @@ video {
     margin-top: 4rem;
   }
 
-  .md\:mt-8{
-    margin-top: 2rem;
-  }
-
   .md\:mt-20{
     margin-top: 5rem;
+  }
+
+  .md\:mt-8{
+    margin-top: 2rem;
   }
 
   .md\:block{
@@ -1312,6 +1307,10 @@ video {
 
   .md\:hidden{
     display: none;
+  }
+
+  .md\:h-24{
+    height: 6rem;
   }
 
   .md\:h-28{
@@ -1338,6 +1337,11 @@ video {
 
   .md\:pt-16{
     padding-top: 4rem;
+  }
+
+  .md\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .md\:text-5xl{
@@ -1381,12 +1385,28 @@ video {
     margin-left: 3rem;
   }
 
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
   .lg\:h-32{
     height: 8rem;
   }
 
+  .lg\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .lg\:w-10\/12{
     width: 83.333333%;
+  }
+
+  .lg\:w-2\/3{
+    width: 66.666667%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 
   .lg\:pl-32{
